syntax = "proto3";

package dashboard;

option go_package = "github.com/emersonnjsantos/ParkingZero/pkg/dashboardpb";

// DashboardService — Analytics e relatórios para donos e lojas
service DashboardService {
  // Resumo geral do estacionamento
  rpc GetParkingSummary (GetParkingSummaryRequest) returns (ParkingSummary);

  // Receita por período
  rpc GetRevenueReport (GetRevenueReportRequest) returns (RevenueReport);

  // Resumo de patrocínios para lojas
  rpc GetStoreSponsorshipSummary (GetStoreSummaryRequest) returns (StoreSponsorshipSummary);

  // Ocupação em tempo real
  rpc GetOccupancyStats (GetOccupancyRequest) returns (OccupancyStats);

  // Eventos BI (admin)
  rpc ListBIEvents (ListBIEventsRequest) returns (ListBIEventsResponse);
}

// === Parking Dashboard ===

message GetParkingSummaryRequest {
  string garage_id = 1;
  int64 from_timestamp = 2;
  int64 to_timestamp = 3;
}

message ParkingSummary {
  string garage_id = 1;
  int32 total_entries = 2;
  int32 total_exits = 3;
  int32 current_occupancy = 4;
  double total_revenue = 5;
  double total_sponsored = 6;
  double average_stay_hours = 7;
  int64 period_start = 8;
  int64 period_end = 9;
}

// === Revenue ===

message GetRevenueReportRequest {
  string garage_id = 1;
  string period = 2;           // "day", "week", "month"
  int64 from_timestamp = 3;
  int64 to_timestamp = 4;
}

message RevenueReport {
  string garage_id = 1;
  double total_revenue = 2;
  double total_sponsored = 3;
  double net_revenue = 4;
  repeated DailyRevenue daily_breakdown = 5;
  int32 total_transactions = 6;
}

message DailyRevenue {
  string date = 1;              // "2026-02-15"
  double revenue = 2;
  double sponsored = 3;
  int32 entries = 4;
  int32 exits = 5;
}

// === Store Dashboard ===

message GetStoreSummaryRequest {
  string store_id = 1;
  int64 from_timestamp = 2;
  int64 to_timestamp = 3;
}

message StoreSponsorshipSummary {
  string store_id = 1;
  string store_name = 2;
  double total_spent = 3;
  int32 total_sponsorships = 4;
  int32 unique_customers = 5;
  double average_invoice = 6;
  repeated MonthlySponsorshipStats monthly = 7;
}

message MonthlySponsorshipStats {
  string month = 1;             // "2026-02"
  double amount_spent = 2;
  int32 sponsorship_count = 3;
  int32 customer_count = 4;
}

// === Occupancy ===

message GetOccupancyRequest {
  string garage_id = 1;
}

message OccupancyStats {
  string garage_id = 1;
  int32 total_spots = 2;
  int32 occupied_spots = 3;
  int32 available_spots = 4;
  double occupancy_rate = 5;     // 0.0 - 1.0
  repeated HourlyOccupancy hourly_trend = 6;
}

message HourlyOccupancy {
  int32 hour = 1;               // 0-23
  double average_occupancy = 2;
}

// === BI Events ===

message ListBIEventsRequest {
  string event_type = 1;        // filtro opcional
  int64 from_timestamp = 2;
  int64 to_timestamp = 3;
  int32 limit = 4;
}

message ListBIEventsResponse {
  repeated BIEvent events = 1;
  int32 total_count = 2;
}

message BIEvent {
  string event_id = 1;
  string event_type = 2;
  string entity_id = 3;
  int64 timestamp = 4;
  map<string, string> metadata = 5;
}
